# commlib

./: CMakeLists.txt
cmake/: CommLibConfig.cmake.in
include/comm_lib/: comm.hpp  define.hpp  error.hpp  executer.hpp  interface.hpp
include/comm_lib/methods/: uart.hpp
src/: interface.cpp  main.cpp
src/comm_lib/: comm.cpp
src/comm_lib/methods/: uart.cpp
